--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,93 @@
-.container-fluid{
+
+.container-fluid {
     padding-right: 150px;
     padding-left: 150px;
+    background-color: #f5f5f5;
 }
-.upper-section-border{
+
+.col-10 h1{
+    color: #0f6189;
+}
+
+.upper-section-border {
     border: 1px solid rgb(15, 97, 137);
     border-radius: 30px 30px 0 0;
+    background-color: #fff;
 }
-.right-section-border{
+.bottom-section-color{
+    background-color: #fff;
+}
+
+.right-section-border {
     border-right: 1px solid rgb(15, 97, 137);
+}
+
+.down-left-section-border {
+    border-radius: 0 0 0 30px;
+    margin-bottom: -16px;
+}
+
+.menu-section {
+    background-color: rgb(15, 97, 137);
+    color: #fff;
+    padding: 10px;
+}
+
+.menu-section i {
+    color: #fff;
+}
+
+.btn-salir {
+    cursor: pointer;
+    background-color: #8c1c45;
+    color: #fff;
+}
+
+.icon-container {
+    background-color: #0f6189;
+    padding: 10px;
+    border-radius: 36%;
+    width: 75px;
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -17px;
+    left: 40px;
+}
+
+.icon-container i{
+    font-size: 42px;
+}
+.form-container {
+    border: 1px solid #0f6189;
+    border-radius: 30px;
+    padding: 20px;
+    width: 82%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: -125px;
+}
+
+.form-container h2 {
+    color: #0f6189;
+}
+
+.form-container label {
+    color: #0f6189;
+    margin-left: 34%;
+}
+
+.form-container input {
+    width: 60%;
+    margin-left: 22%;
+}
+
+.form-container button {
+    background-color: #8c1c45;
+    color: #fff;
+    margin-top: 10px;
+    margin-left: 30%;
 }
