--- a/css/home.css
+++ b/css/home.css
@@ -37,10 +37,16 @@
     color: #fff;
 }
 
+.custom-btn{
+    color: rgb(15, 97, 137);
+    text-decoration: none;
+}
+
 .btn-salir {
     cursor: pointer;
     background-color: #8c1c45;
     color: #fff;
+    margin-left: 36%;
 }
 
 .icon-container {
@@ -61,107 +67,68 @@
     font-size: 42px;
 }
 
-/* ------- ESTILOS PARA FORMULARIO -------------
-.form-container {
-    border: 1px solid #0f6189;
-    border-radius: 30px;
-    padding: 20px;
-    width: 82%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: -125px;
-}
-
-.form-container h2 {
-    color: #0f6189;
-}
-
-.form-container label {
-    color: #0f6189;
-    margin-left: 34%;
-}
-
-.form-container input {
-    width: 60%;
-    margin-left: 22%;
-}
-
-.form-container button {
-    background-color: #8c1c45;
-    color: #fff;
-    margin-top: 10px;
-    margin-left: 30%;
-}*/
 
 .carousel-inner {
     max-width: 30rem;
-    /* Ajusta según tu preferencia */
-    /*max-height: 400px;  Ajusta según tu preferencia */
     margin: auto;
-    /* Centra el carrusel */
     overflow: hidden;
-    /* Oculta cualquier contenido que sobresalga */
 }
 
 .carousel-item img {
     width: 100%;
-    /* Hace que las imágenes se ajusten al ancho del contenedor */
     height: auto;
-    /* Mantiene la proporción de aspecto de las imágenes */
 }
 
-@media (min-width: 768px) {
-    .navbar-toggler {
+@media (min-width: 769px) {
+    #btn-drawer{
         display: none;
     }
-}
-
-@media (max-width: 768px) {
-
-    /*Haciendo visible menu hamburguesa */
-    /*nav {
-        display: none;
-    }*/
-
-    .navbar-toggler {
+    #imagen-desktop{
         display: block;
     }
-
-    .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    #imagen-movil{
+        display: none;
     }
-
-
-    /*Ajustando Carrusel */
-    .carousel-inner {
-        max-width: 300px;
-        max-height: 200px;
+    #upper-movil{
+        display: none;
     }
-
-    /*Ajustando tamaño de iconos y texto */
-    .icon-container i {
-        font-size: 24px;
+    #upper-desktop{
+        display: flex;
     }
-
-    .menu-section {
-        font-size: 14px;
+    #salir-movil{
+        display: none;
     }
-
-    /*Ajustando layout inferior*/
-    .bottom-section-color {
-        flex-direction: column;
+    #salir-desktop{
+        display: block;
     }
-
-    .col-2,
-    .col-10 {
-        width: 100%;
-    }
-
-    /*Ajustando padding*/
-
-    .container-fluid {
-        padding: 10px;
-    }
-
 }
+
+@media (max-width:768px){
+    .container-fluid {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    #upper-movil{
+        display: block;
+    }
+    #upper-movil h1{
+        color: #0f6189;
+    }
+    #upper-desktop{
+        display: none;
+    }
+    #btn-drawer{
+        margin: 10px;
+    }
+    .offcanvas{
+        max-width: 75%;
+    }
+    #salir-movil{
+        display: block;
+    }
+    #salir-desktop{
+        display: none;
+    }
+}
+
+
